# tpos-homework-1

./: .gitignore  LICENSE  Makefile  README.md  install.sh  main.py  main.sh  pyproject.toml
Homework 1/: install.sh  main.py
